--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -12,7 +12,7 @@
         android:enabled="true"
         android:icon="@drawable/ic_navigation_forum"
         app:showAsAction="ifRoom"
-        android:title="@string/forum" />
+        android:title="待定" />
     <item
         android:id="@+id/menu_market"
         android:enabled="true"
